<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, RegulargpsActivity!</string>
    <string name="app_name">RegularGPS</string>
    <string name="save">save</string>
    <string name="start">gps start</string>
    <string name="stop">gps stop</string>
    <string name="twitter">twitter auth</string>
    <string name="twitter_clear">twitter auth clear</string>

</resources>